# freetype

./: CMakeLists.txt
builds/unix/: aclocal.m4  configure
cmake/template/: Config.cmake.in
